corrected starting and end points of animation to fit the user window size (ie dynamic); added z-index to header and changed drag point so widgets disappear below the header [#16384885]

--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -10,6 +10,8 @@ body{
 	background-color: $accent-color;
 	text-align: center;
 	margin-bottom: 10px;
+	z-index: 999999999999;
+	position: relative;
 	box-shadow: 0 1px 2px darken($accent-color, 40%);
 
 	#user-nav { 
